force-app/main/default/objects/Room__c/fields/Hotal__c.field-meta.xml
<CustomField>
    <fullName>Hotal__c</fullName>
    <label>Hotal</label>
    <referenceTo>Hotal__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>