force-app/main/default/objects/Room__c/fields/Tariff__c.field-meta.xml
<CustomField>
    <fullName>Tariff__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Tariff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>