force-app/main/default/objects/Room__c/recordTypes/Duplex.recordType-meta.xml
<RecordType>
    <fullName>Duplex</fullName>
    <active>true</active>
    <label>Duplex</label>
</RecordType>