force-app/main/default/objects/Room__c/recordTypes/Super.recordType-meta.xml
<RecordType>
    <fullName>Super</fullName>
    <active>true</active>
    <label>Super</label>
</RecordType>